--- a/.devops/terraform/docker-compose.yml
+++ b/.devops/terraform/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     image: hashicorp/terraform:0.12.29
     volumes:
       - .:/infra
+      - ../helm-charts:/infra/helm-charts:ro
     working_dir: /infra
     environment:
       - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
