--- a/.devops/helm-charts/hello-world-service/values.yaml
+++ b/.devops/helm-charts/hello-world-service/values.yaml
@@ -1,7 +1,10 @@
 replicaCount: 2
 
+namespace:
+
 image:
   repository: 096007086684.dkr.ecr.eu-west-1.amazonaws.com/scaling-cloud/hello-world
+  version: latest
   pullPolicy: Always
 
 imagePullSecrets: []
