--- a/.devops/helm-charts/hello-world-service/templates/deployment.yaml
+++ b/.devops/helm-charts/hello-world-service/templates/deployment.yaml
@@ -32,16 +32,17 @@ spec:
           ports:
             - name: http
               containerPort: {{ .Values.app.port }}
+              protocol: TCP
           livenessProbe:
             httpGet:
-              path: /
+              path: /actuator/health
               port: http
             initialDelaySeconds: 30
             periodSeconds: 10
           # readinessProbe:
-          #   httpGet:
-          #     path: /
-          #     port: http
+          #    httpGet:
+          #      path: /
+          #      port: http
           resources:
       {{- toYaml .Values.resources | nindent 12 }}
       {{- with .Values.nodeSelector }}
