--- a/.devops/helm-charts/hello-world-service/templates/deployment.yaml
+++ b/.devops/helm-charts/hello-world-service/templates/deployment.yaml
@@ -35,7 +35,7 @@ spec:
               protocol: TCP
           livenessProbe:
             httpGet:
-              path: /actuator/health
+              path: /healthz
               port: http
             initialDelaySeconds: 30
             periodSeconds: 10
