--- a/.devops/helm-charts/hello-world-service/Chart.yaml
+++ b/.devops/helm-charts/hello-world-service/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 name: hello-world-service
-description: A Helm chart to manage Hello-World service in Kubernetes
+description: A Helm chart to manage the Hello-World service.
 
 # A chart can be either an 'application' or a 'library' chart.
 #
