--- a/.github/workflows/continuous-deployment.yml
+++ b/.github/workflows/continuous-deployment.yml
@@ -17,7 +17,7 @@ jobs:
   changes:
     runs-on: ubuntu-latest
     outputs:
-      services: ${{ steps.filter.outputs.services }}
+      gateway: ${{ steps.filter.outputs.gateway }}
       infrastructure: ${{ steps.filter.outputs.infrastructure }}
 
     steps:
@@ -26,9 +26,8 @@ jobs:
         id: filter
         with:
           filters: |
-            services:
-              - 'services/**/*'
-              - 'libraries/**/*'
+            gateway:
+              - 'gateway/**/*'
             infrastructure:
               - '.devops/helm-charts/*'
               - '.devops/terraform/*'
@@ -36,7 +35,7 @@ jobs:
   test:
     runs-on: ubuntu-latest
     needs: [changes]
-    if: ${{ needs.changes.outputs.services == 'true' }}
+    if: ${{ needs.changes.outputs.gateway == 'true' }}
 
     steps:
       - uses: actions/checkout@v2
@@ -45,20 +44,19 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: ${{ env.java }}
-      - name: Set up Gradle cache
-        uses: actions/cache@v1
-        with:
-          path: ~/.gradle/caches
-          key: ${{ runner.os }}-${{ env.java }}-gradle-${{ hashFiles('**/*.gradle.kts') }}
-          restore-keys: |
-            ${{ runner.os }}-${{ env.java }}-gradle-
       - name: Test Services
-        run: ./gradlew test
+        uses: eskatos/gradle-command-action@v1
+        with:
+          build-root-directory: gateway
+          wrapper-cache-enabled: true
+          dependencies-cache-enabled: true
+          configuration-cache-enabled: true
+          arguments: test
 
   build:
     runs-on: ubuntu-20.04
     needs: [changes, test]
-    if: ${{ needs.changes.outputs.services == 'true' }}
+    if: ${{ needs.changes.outputs.gateway == 'true' }}
 
     steps:
       - uses: actions/checkout@v2
@@ -81,6 +79,7 @@ jobs:
       - name: Build, tag and push image to Amazon ECR
         uses: eskatos/gradle-command-action@v1
         with:
+          build-root-directory: gateway
           wrapper-cache-enabled: true
           dependencies-cache-enabled: true
           configuration-cache-enabled: true
