--- a/.github/workflows/continuous-deployment.yml
+++ b/.github/workflows/continuous-deployment.yml
@@ -18,7 +18,6 @@ jobs:
     runs-on: ubuntu-latest
     outputs:
       gateway: ${{ steps.filter.outputs.gateway }}
-      infrastructure: ${{ steps.filter.outputs.infrastructure }}
 
     steps:
       - uses: actions/checkout@v2
@@ -28,9 +27,6 @@ jobs:
           filters: |
             gateway:
               - 'gateway/**/*'
-            infrastructure:
-              - '.devops/helm-charts/*'
-              - '.devops/terraform/*'
 
   test:
     runs-on: ubuntu-latest
@@ -102,16 +98,16 @@ jobs:
           terraform validate
           terraform fmt -check
 
-  plan:
+  deploy_production:
     runs-on: ubuntu-latest
-    needs: [changes, validate]
-    if: ${{ needs.changes.outputs.infrastructure == 'true' }}
+    needs: [validate]
+    if: github.ref == 'refs/heads/master'
 
     steps:
       - uses: actions/checkout@v2
       - uses: hashicorp/setup-terraform@v1
         with:
-          terraform_version: 0.12.29
+          terraform_version: 0.13.2
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
@@ -120,10 +116,9 @@ jobs:
           aws-region: eu-west-1
       - name: Login to Amazon ECR
         uses: aws-actions/amazon-ecr-login@v1
-      - name: Plan Staging
+      - name: Deploy Production
         run: |
-          cd .devops/terraform
+          cd .devops/terraform/production
           terraform init
-          terraform workspace select staging || terraform workspace new staging
-          terraform plan
+          terraform apply -auto-approve
 
