--- a/web-app/.eslintrc
+++ b/web-app/.eslintrc
@@ -30,9 +30,12 @@
     "jest-dom"
   ],
   "rules": {
+    "@typescript-eslint/no-empty-interface": "off",
+    "@typescript-eslint/no-empty-function": "off",
     "react/button-has-type": "error",
     "react/jsx-filename-extension": ["error", {"extensions": [".tsx"]}],
     "react/jsx-no-literals": "warn",
+    "react/prop-types": "off",
     "react/no-array-index-key": "error",
     "react/no-danger": "error",
     "react/no-multi-comp": "warn",
