--- a/web-app/package.json
+++ b/web-app/package.json
@@ -6,14 +6,16 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "start": "webpack-dev-server --mode=development",
-    "build": "rm -rf dist && webpack --mode=production",
+    "dev": "next dev",
+    "start": "next start",
+    "build": "next build",
     "typecheck": "tsc",
     "test": "jest",
     "lint": "eslint --ext .js,.ts,.tsx .",
     "format": "prettier --write --check \"!.cache\" \"!dist\" ."
   },
   "dependencies": {
+    "next": "^9.5.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
@@ -51,9 +53,6 @@
     "postcss-loader": "^4.0.1",
     "prettier": "^2.0.5",
     "style-loader": "^1.2.1",
-    "typescript": "^3.9.7",
-    "webpack": "^4.44.0",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0"
+    "typescript": "^3.9.7"
   }
 }
