--- a/web-app/tsconfig.json
+++ b/web-app/tsconfig.json
@@ -1,10 +1,35 @@
 {
   "compilerOptions": {
     "allowSyntheticDefaultImports": true,
-    "jsx": "react",
-    "lib": ["DOM", "ESNext"],
+    "jsx": "preserve",
+    "lib": [
+      "DOM",
+      "ESNext"
+    ],
     "noEmit": true,
     "skipLibCheck": true,
-    "strict": true
-  }
+    "strict": true,
+    "target": "es5",
+    "allowJs": true,
+    "forceConsistentCasingInFileNames": true,
+    "esModuleInterop": true,
+    "module": "esnext",
+    "moduleResolution": "node",
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "baseUrl": "./",
+    "paths": {
+      "@scaling/*": ["./packages/*"],
+      "@scaling-applications/*": ["./applications/*"]
+    },
+    "outDir": ""
+  },
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx"
+  ],
+  "exclude": [
+    "node_modules"
+  ]
 }
