--- a/web-app/package.json
+++ b/web-app/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "dev": "next dev",
     "start": "next start",
-    "build": "next build",
+    "build": "next build && next export",
     "typecheck": "tsc",
     "test": "jest",
     "lint": "eslint --ext .js,.ts,.tsx .",
