--- a/.devops/kubernetes/helm/charts/hello-world-service/values.yaml
+++ b/.devops/kubernetes/helm/charts/hello-world-service/values.yaml
@@ -1,20 +1,12 @@
 replicaCount: 2
 
 image:
-  repository: 096007086684.dkr.ecr.eu-west-1.amazonaws.com/scaling-cloud/hello-world
-  version: latest
+  tag: latest
   pullPolicy: Always
 
 imagePullSecrets: []
 nameOverride: ""
 fullnameOverride: ""
-
-serviceAccount:
-  # Specifies whether a service account should be created
-  create: false
-  # The name of the service account to use.
-  # If not set and create is true, a name is generated using the fullname template
-  name:
 
 podSecurityContext: {}
 # fsGroup: 2000
