--- a/web-app/package.json
+++ b/web-app/package.json
@@ -12,7 +12,7 @@
     "typecheck": "tsc",
     "test": "jest",
     "lint": "eslint --ext .js,.ts,.tsx .",
-    "format": "prettier --write --check \"!.cache\" \"!dist\" ."
+    "format": "prettier --write --check \"!.next\" \"!out\" ."
   },
   "dependencies": {
     "next": "^9.5.3",
@@ -53,6 +53,7 @@
     "postcss-loader": "^4.0.1",
     "prettier": "^2.0.5",
     "style-loader": "^1.2.1",
+    "ts-jest": "^26.3.0",
     "typescript": "^3.9.7"
   }
 }
