--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,11 +11,11 @@ on:
 jobs:
   build_web-app:
     runs-on: ubuntu-latest
-    env:
-      node: 14.10.x
     defaults:
       run:
         working-directory: web-app
+    env:
+      node: 14.10.x
 
     steps:
       - uses: actions/checkout@v2
@@ -43,11 +43,12 @@ jobs:
 
   build_gateway:
     runs-on: ubuntu-20.04
-    env:
-      java: 11.0.x
     defaults:
       run:
         working-directory: gateway
+    env:
+      java: 11.0.x
+      DOCKER_REGISTRY: ${{ secrets.DOCKER_REGISTRY }}
 
     steps:
       - uses: actions/checkout@v2
@@ -65,15 +66,12 @@ jobs:
           sudo apt update
           sudo apt install amazon-ecr-credential-helper
 
+      - uses: gradle/wrapper-validation-action@v1
+
       - uses: actions/setup-java@v1
         with:
           java-version: ${{ env.java }}
 
       - name: Build, tag and push image to Amazon ECR
-        uses: eskatos/gradle-command-action@v1
-        with:
-          build-root-directory: gateway
-          wrapper-cache-enabled: true
-          dependencies-cache-enabled: true
-          configuration-cache-enabled: true
-          arguments: jib
+        run: |
+          ./gradlew clean jib
