--- a/.github/workflows/test_manual.yml
+++ b/.github/workflows/test_manual.yml
@@ -2,15 +2,33 @@ name: Test manual action run
 on:
   workflow_dispatch:
     inputs:
-      puppy:
-        description: 'A kind of puppy.'
-        required: true
+      build:
+        description: 'Build workflow name.'
+        required: false
+        default: "build.yml"
 
 jobs:
-  activation:
-    name: Print the input
+  deploy_preview:
     runs-on: ubuntu-latest
+    if: github.ref != 'refs/heads/master'
+
     steps:
-      - name: Print puppy type
-        id: printPuppyType
-        run: echo The puppy is ${{ github.event.inputs.puppy }}
+      - uses: actions/checkout@v2
+
+      - uses: rlespinasse/github-slug-action@v2.x
+
+      - name: Check build workflow status
+        id: check
+        run: |
+          output=$(curl -sSL -X GET -G -H "Accept: application/vnd.github.v3+json" -d "branch=${{ env.GITHUB_REF_SLUG }}" -d "event=push" https://api.github.com/repos/${{ github.repository }}/actions/workflows/${{ github.event.inputs.build }}/runs | jq -r '.workflow_runs[0] | "\(.conclusion)"')
+          echo "::set-output name=status::$output"
+
+      - name: Build workflow failed
+        if: steps.check.outputs.status != 'success'
+        run: |
+          exit 1
+
+      - name: Build workflow success
+        if: steps.check.outputs.status == 'success'
+        run: |
+          exit 0
