--- a/.github/workflows/test_manual.yml
+++ b/.github/workflows/test_manual.yml
@@ -32,3 +32,28 @@ jobs:
         if: steps.check.outputs.status == 'success'
         run: |
           exit 0
+
+  deploy_production:
+    runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/master'
+
+    steps:
+      - uses: actions/checkout@v2
+
+      - uses: rlespinasse/github-slug-action@v2.x
+
+      - name: Check build workflow status
+        id: check
+        run: |
+          output=$(curl -sSL -X GET -G -H "Accept: application/vnd.github.v3+json" -d "branch=${{ env.GITHUB_REF_SLUG }}" -d "event=push" https://api.github.com/repos/${{ github.repository }}/actions/workflows/${{ github.event.inputs.build }}/runs | jq -r '.workflow_runs[0] | "\(.conclusion)"')
+          echo "::set-output name=status::$output"
+
+      - name: Build workflow failed
+        if: steps.check.outputs.status != 'success'
+        run: |
+          exit 1
+
+      - name: Build workflow success
+        if: steps.check.outputs.status == 'success'
+        run: |
+          exit 0
