--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,10 +3,15 @@ name: Build
 on:
   push:
     branches:
-      - master
+    paths:
+      - 'web-app/**'
+      - 'gateway/**'
   pull_request:
     branches:
       - master
+    paths:
+      - 'web-app/**'
+      - 'gateway/**'
 
 jobs:
   build_web-app:
