--- a/.github/workflows/test-gateway.yml
+++ b/.github/workflows/test-gateway.yml
@@ -30,6 +30,15 @@ jobs:
         with:
           java-version: ${{ env.java }}
 
+      - uses: actions/cache@v2
+        with:
+          path: |
+            ~/.gradle/caches
+            ~/.gradle/wrapper
+          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*') }}
+          restore-keys: |
+            ${{ runner.os }}-gradle-
+
       - name: Test
         run: |
-          ./gradlew clean test
+          ./gradlew test
